# qsharp-compiler

./: .editorconfig  .fantomasignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Formatter.sln  NOTICE.txt  NuGet.Config  NuGet.config  PRIVACY.md  QIR-README.md  QsCompiler.sln  QsFmt.sln  README.md  VisualStudioExtension.sln  bootstrap.cmd  bootstrap.ps1  fsharplint.json  global.json  omnisharp.json  setVersionNumber.cmd
.config/: dotnet-tools.json  (+1 more)
src/Passes/: .clang-format  .clang-tidy  .clang-tidy.orig  .dockerignore  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists_BASE_73868.txt  CONTRIBUTING.md  CONTRIBUTING.md.orig  Dockerfile  Makefile  Makefile.orig  README.md  README.md.orig  dev-environment.yml  doxygen.cfg  manage  manage.orig  requirements.txt  requirements.txt.orig
src/Passes/ComponentExamples/: CMakeLists.txt
src/Passes/ComponentExamples/CArrayMap/: main.cpp
src/Passes/ComponentExamples/HelloWorld/: main.cpp
src/Passes/ComponentExamples/InlinePassComponent/: main.cpp
src/Passes/Docker/: CI.Ubuntu20.dockerfile  Docs.dockerfile
src/Passes/QirExamples/: Makefile
src/Passes/QirExamples/BasicTuple/: combined.ll  optimised.ll
src/Passes/QirExamples/ConstArray/: Makefile  arrays.cpp.ll  combined.ll  expected-output.ll  optimised.ll  strip.py  stripped.ll
src/Passes/QirExamples/ConstQubitArray/: Makefile  combined.ll  expected-output.ll  optimised.ll
src/Passes/QirExamples/IsingModel/: Makefile
src/Passes/QirExamples/LoopRecursion/: Makefile  expected-output.ll
src/Passes/QirExamples/ParallelQRng/: Makefile
src/Passes/QirExamples/RandomWalkPE1/: Makefile
src/Passes/QirExamples/RandomWalkPE2/: Makefile
src/Passes/QirExamples/TeleportChain/: expected-output.ll
src/Passes/Source/: CMakeLists.txt
src/Passes/Source/AllocationManager/: AllocationManager.cpp  AllocationManager.hpp  IAllocationManager.cpp  IAllocationManager.hpp
src/Passes/Source/Apps/: CMakeLists.txt
src/Passes/Source/Commandline/: ConfigBind.hpp  ConfigurationBindInterface.cpp  ConfigurationBindInterface.hpp  ConfigurationManager.cpp  ConfigurationManager.cpp.orig  ConfigurationManager.hpp  ConfigurationManager.hpp.orig  ConfigurationManager_BACKUP_69192.hpp  IConfigBind.cpp  IConfigBind.hpp  ParameterParser.cpp  ParameterParser.cpp.orig  ParameterParser.hpp  Settings.cpp  Settings.hpp
src/Passes/Source/Generators/: DefaultProfileGenerator.cpp  DefaultProfileGenerator.hpp  IProfileGenerator.cpp  IProfileGenerator.hpp  LlvmPassesConfig.cpp  LlvmPassesConfig.hpp  LlvmPassesConfiguration.cpp  LlvmPassesConfiguration.hpp  ProfileGenerator.cpp  ProfileGenerator.hpp
src/Passes/Source/Llvm/: Llvm.hpp  Llvm.hpp.orig
src/Passes/Source/Logging/: CommentLogger.cpp  CommentLogger.hpp  ILogger.cpp  ILogger.hpp  LogCollection.cpp  LogCollection.hpp
src/Passes/Source/ModuleLoader/: ModuleLoader.hpp
src/Passes/Source/Passes/: CMakeLists.txt
src/Passes/Source/Profile/: Profile.cpp  Profile.hpp
src/Passes/Source/ProfilePass/: Configuration.cpp  Configuration.hpp  Profile.cpp  Profile.hpp
src/Passes/Source/Profiles/: BaseProfile.cpp  BaseProfile.hpp  ConfigurationManager.hpp  DefaultProfileGenerator.cpp  DefaultProfileGenerator.hpp  IProfile.cpp  IProfile.hpp  IProfileGenerator.cpp  IProfileGenerator.hpp  LlvmPassesConfig.hpp  ProfileGenerator.cpp  ProfileGenerator.hpp  RuleSetProfile.cpp  RuleSetProfile.hpp
src/Passes/Source/RemoveDisallowedAttribubtesPass/: RemoveDisallowedAttribubtesPass.hpp
src/Passes/Source/RemoveDisallowedAttributesPass/: RemoveDisallowedAttributesPass.hpp
src/Passes/Source/RuleTransformationPass/: Configuration.cpp  Configuration.hpp  Profile.cpp  Profile.cpp.orig  Profile.hpp  RulePass.cpp  RulePass.hpp  RuleTransformationPassConfiguration.cpp  RuleTransformationPassConfiguration.hpp
src/Passes/Source/Rules/: Factory.cpp  Factory.cpp.orig  Factory.hpp  Factory.hpp.orig  FactoryConfig.hpp  FactoryConfig.hpp.orig  IOperandPrototype.cpp  IOperandPrototype.hpp  OperandPrototype.cpp  OperandPrototype.hpp  ReplacementRule.cpp  ReplacementRule.hpp  RuleSet.cpp  RuleSet.hpp
src/Passes/Source/StripAttributesPass/: StripAttributes.hpp
src/Passes/Source/TestTools/: IrManipulationTestHelper.cpp  IrManipulationTestHelper.hpp  ProfileTest.cpp  ProfileTest.hpp
src/Passes/Source/TransformationRulesPass/: TransformationRulesPass.cpp  TransformationRulesPass.hpp  TransformationRulesPassConfiguration.cpp  TransformationRulesPassConfiguration.hpp
src/Passes/Source/Types/: Types.hpp
src/Passes/Source/ValidationPass/: ValidationConfiguration.hpp  ValidationPass.cpp  ValidationPass.hpp  ValidationPassConfiguration.hpp
src/Passes/Source/Validator/: Validator.cpp  Validator.hpp
src/Passes/Source/ValueTracker/: ValueTracker.hpp
src/Passes/cmake/: Library.cmake  Testing.cmake
src/Passes/docs/: base-profile-transformations.md  continous-integration.md  index.md  index.md.orig  library-structure.md  package.json
src/Passes/docs/.doxybook/: config.json
src/Passes/docs/nginx/: default.conf
src/Passes/docs/src/: base-profile-transformations.md  continous-integration.md  index.md  library-structure.md
src/Passes/examples/: Makefile
src/Passes/examples/ClassicalIrCommandline/: Makefile  Makefile.orig  README.md  README.md.orig  classical-program.c  classical-program.c.orig  classical-program.ll
src/Passes/include/: Llvm.hpp  Llvm.hpp.orig
src/Passes/libs/: CMakeLists.txt  CMakeLists.txt.orig
src/Passes/src/: OperandPrototype.cpp
src/Passes/tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
src/Passes/undefined/: adaptor.cpp
src/QirTools/pyqir/: .gitignore  Cargo.toml  Cargo.toml.template  NuGet.Config  README.md  __init__.py  bell_measure.ll  bell_no_measure.ll  bernstein_vazirani.ll  build.ps1  build_wheels.sh  dev-environment.yml  prerequisites.ps1  pytest.ll  qir-runtime.csproj  requirements-dev.txt  setup.cfg  setup.py  tox.ini
src/QirTools/qirlib/: Cargo.toml
src/QsPasses/: .clang-format  .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  develop.env  manage
src/QsPasses/src/: Llvm.hpp
(+2782 files in other folders)
