cmake_minimum_required(VERSION 3.4.3)

microsoft_add_library(Logging)

microsoft_add_library(TestTools)
microsoft_add_library_tests(TestTools Generators Logging)

microsoft_add_library(Commandline)
microsoft_add_library_tests(Commandline Logging)

microsoft_add_library(Profile)
microsoft_add_library_tests(Profile)

microsoft_add_library(Validator)
target_link_libraries(Validator PRIVATE Logging)

microsoft_add_library_tests(Validator ValidationPass Logging)
microsoft_add_library(ValidationPass Logging)

microsoft_add_library(AllocationManager)
microsoft_add_library_tests(AllocationManager Logging)

microsoft_add_library(TransformationRulesPass)
target_link_libraries(TransformationRulesPass PRIVATE Rules Commandline AllocationManager)
microsoft_add_library_tests(TransformationRulesPass Rules TransformationRulesPass AllocationManager Commandline Generators Validator ValidationPass Logging) 


microsoft_add_library(Rules)
microsoft_add_library_tests(Rules Rules TransformationRulesPass AllocationManager Commandline Generators Logging)

target_link_libraries(Rules PRIVATE AllocationManager)

microsoft_add_library(Generators)
target_link_libraries(Generators PRIVATE Rules Commandline AllocationManager TransformationRulesPass Profile Validator ValidationPass)
microsoft_add_library_tests(Generators Rules TransformationRulesPass AllocationManager Commandline Generators Logging)

add_subdirectory(Apps)
