[package]
authors = ["Azure Quantum"]
name = "pyqir"
version = "0.1.0"
edition = "2018"

[workspace]
members = [".", "qirlib"]

[dependencies]
qirlib = {path = "qirlib"}

[dependencies.pyo3]
version = "0.13.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "pyqir"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
