[package]
name = "qirlib"
version = "0.1.0"
edition = "2018"
description = "Base Profile QIR generation library for use with the Quantum Development Kit."

[dependencies]
llvm-sys = "110"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }

[dev-dependencies]
serial_test = "0.5.1"

[lib]
name = "qirlib"
