[package]
name = "qirlib"
version = "0.1.0"
edition = "2018"
description = "Base Profile QIR generation library for use with the Quantum Development Kit."

[dependencies]
llvm-sys = "110"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }
log = "0.4.14"
libloading = "0.7.0"
cty="0.2.1"
rand="0.8.4"
llvm-ir = { version = "0.8.0", features = ["llvm-11"] }

[dev-dependencies]
serial_test = "0.5.1"
tempfile = "3.2.0"

[lib]
name = "qirlib"
