[package]
name = "microsoft-quantum-qir-qsharp-core-sys"
version = "0.1.0"
edition = "2018"
links = "Microsoft.Quantum.Qir.QSharp.Core"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"
libloading = "0.7.0"
qir-libloading = { path = "../qir-libloading" }

[build-dependencies]
libloading = "0.7.0"
