[package]
name = "microsoft-quantum-simulator-runtime-sys"
version = "0.1.0"
edition = "2018"
links = "Microsoft.Quantum.Simulator.Runtime"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"
libloading = "0.7.0"
qir-libloading = { path = "../qir-libloading" }
microsoft-quantum-qir-runtime-sys = { path = "../microsoft-quantum-qir-runtime-sys" }
microsoft-quantum-qir-qsharp-core-sys = { path = "../microsoft-quantum-qir-qsharp-core-sys"}
microsoft-quantum-qir-qsharp-foundation-sys = {path = "../microsoft-quantum-qir-qsharp-foundation-sys" }

[build-dependencies]
qir-libloading = { path = "../qir-libloading" }
